--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -75,6 +75,11 @@
             android:layout_height="match_parent"
             android:layout_weight="9">
 
+            <totenhund.com.tetris.view.TetrisView
+                android:id="@+id/view_tetris"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         </LinearLayout>
     </LinearLayout>
 
